[project]
name = "comfyui-tab-handler"
description = "Use the Tab key to switch between textfields"
version = "1.0.1"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-tab-handler"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Tab Handler"
Icon = ""
